Refactored project to contain a Map<UUID,Task> of tasks instead of List<Task>